fix: contrast (a11y)

--- a/kanban/src/styles/_colors.scss
+++ b/kanban/src/styles/_colors.scss
@@ -13,7 +13,8 @@ $colors: (
 );
 
 $color-always-white: #fff;
-$color-always-gray: rgba(#fff,.7);
+$color-always-gray: rgba(#fff,.9);
+
 @mixin generateCssVariables ($theme_index, $isDefault: false) {
 
 	@if $theme_index != 1 and $theme_index != 2 {
